--- a/css/main.css
+++ b/css/main.css
@@ -101,6 +101,94 @@ body {
   border: none;
 }
 
+.form-btn {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  padding: 10px 28px;
+}
+
+.form-btn__icon {
+  fill: #ffffff;
+  margin-left: 10px;
+}
+
+.filter-btn {
+  padding-left: 22px;
+  padding-right: 22px;
+  padding-top: 6px;
+  padding-bottom: 6px;
+  font-family: var(--main-font);
+  color: var(--main-page-color);
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 1.6;
+  letter-spacing: 0.03em;
+  text-align: center;
+  background-color: var(--light);
+  cursor: pointer;
+  border: none;
+  border-radius: 4px;
+  -webkit-transition-property: color, background-color, -webkit-box-shadow;
+  transition-property: color, background-color, -webkit-box-shadow;
+  transition-property: color, background-color, box-shadow;
+  transition-property: color, background-color, box-shadow, -webkit-box-shadow;
+  -webkit-transition-duration: 250ms;
+          transition-duration: 250ms;
+  -webkit-transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+          transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+}
+.filter-btn:hover, .filter-btn:focus {
+  color: #ffffff;
+  background-color: var(--accent-color);
+  -webkit-box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08), 0px 2px 2px rgba(0, 0, 0, 0.12);
+          box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08), 0px 2px 2px rgba(0, 0, 0, 0.12);
+}
+
+.modal-btn {
+  display: block;
+  margin: 0 auto;
+}
+
+.modal-button-close {
+  position: absolute;
+  top: 8px;
+  right: 8px;
+  padding: 0;
+  width: 30px;
+  height: 30px;
+  border-radius: 50%;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  background: #ffffff;
+  border: 1px solid rgba(0, 0, 0, 0.1);
+  cursor: pointer;
+  color: currentColor;
+  -webkit-transition-property: fill, border-color;
+  transition-property: fill, border-color;
+  -webkit-transition-duration: 250ms;
+          transition-duration: 250ms;
+  -webkit-transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+          transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+}
+.modal-button-close:hover, .modal-button-close:focus {
+  fill: var(--accent-color);
+  border-color: var(--accent-color);
+}
+
 .backdrop {
   position: fixed;
   top: 0;
@@ -328,49 +416,11 @@ body {
   color: var(--accent-color);
 }
 
-.modal-btn {
-  display: block;
-  margin: 0 auto;
-}
-
-.modal-button-close {
-  position: absolute;
-  top: 8px;
-  right: 8px;
-  padding: 0;
-  width: 30px;
-  height: 30px;
-  border-radius: 50%;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  background: #ffffff;
-  border: 1px solid rgba(0, 0, 0, 0.1);
-  cursor: pointer;
-  color: currentColor;
-  -webkit-transition-property: fill, border-color;
-  transition-property: fill, border-color;
-  -webkit-transition-duration: 250ms;
-          transition-duration: 250ms;
-  -webkit-transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
-          transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
-}
-.modal-button-close:hover, .modal-button-close:focus {
-  fill: var(--accent-color);
-  border-color: var(--accent-color);
-}
-
 .header {
   border-bottom: 1px solid #ececec;
 }
 
-.header-container {
+.header__container {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -379,14 +429,14 @@ body {
           align-items: center;
 }
 
-.header-list {
+.navigation__list {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
   gap: 40px;
 }
 
-.header-logo {
+.header__logo {
   margin-right: 93px;
   font-family: var(--secondary-font);
   font-weight: 700;
@@ -395,11 +445,11 @@ body {
   letter-spacing: 0.03em;
   color: var(--accent-color);
 }
-.header-logo span {
+.header__logo span {
   color: #000000;
 }
 
-.header-nav {
+.navigation {
   margin-right: auto;
   display: -webkit-box;
   display: -ms-flexbox;
@@ -409,7 +459,7 @@ body {
           align-items: center;
 }
 
-.header-link {
+.navigation__link {
   display: block;
   padding-top: 32px;
   padding-bottom: 32px;
@@ -426,20 +476,20 @@ body {
           transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.header-link:hover,
-.header-link:focus,
-.contacts-link:hover,
-.contacts-link:focus {
+.navigation__link:hover,
+.navigation__link:focus,
+.contacts__link:hover,
+.contacts__link:focus {
   color: var(--accent-color);
 }
 
-.contacts {
+.header__contacts {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
 }
 
-.contact-icon {
+.contacts__icon {
   fill: currentColor;
   margin-right: 10px;
   background-position: center;
@@ -455,7 +505,7 @@ body {
   margin-right: 50px;
 }
 
-.contacts-link {
+.contacts__link {
   padding-top: 32px;
   padding-bottom: 32px;
   font-weight: 500;
@@ -509,7 +559,7 @@ body {
   margin-right: auto;
 }
 
-.hero-title {
+.hero__title {
   width: 696px;
   margin-left: auto;
   margin-right: auto;
@@ -522,21 +572,21 @@ body {
   color: #ffffff;
 }
 
-.features-list {
+.features__list {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
 }
 
-.features-item {
+.features__item {
   width: 270px;
   margin-right: 30px;
 }
-.features-item:last-child {
+.features__item:last-child {
   margin-right: 0;
 }
 
-.features-icon-container {
+.features__icon-container {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -552,7 +602,7 @@ body {
   background-color: var(--light);
 }
 
-.features-title {
+.features__title {
   margin-bottom: 10px;
   font-weight: 700;
   font-size: 14px;
@@ -561,7 +611,7 @@ body {
   text-transform: uppercase;
 }
 
-.features-text {
+.features__text {
   font-size: 14px;
   line-height: 1.71;
   letter-spacing: 0.03em;
@@ -572,7 +622,7 @@ body {
   padding-top: 0;
 }
 
-.work-title {
+.work__title {
   margin-bottom: 50px;
   font-weight: 700;
   font-size: 36px;
@@ -581,7 +631,7 @@ body {
   text-align: center;
 }
 
-.work-list {
+.work__list {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -589,10 +639,10 @@ body {
   margin-left: auto;
 }
 
-.work-item {
+.work__item {
   margin-right: 30px;
 }
-.work-item:last-child {
+.work__item:last-child {
   margin-right: 0;
 }
 
@@ -600,7 +650,7 @@ body {
   position: relative;
 }
 
-.work-wrap-title {
+.work-wrap__title {
   position: absolute;
   bottom: 0;
   left: 0;
@@ -629,7 +679,7 @@ body {
   background-color: var(--light);
 }
 
-.team-cards {
+.team__cards {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -637,7 +687,7 @@ body {
   gap: 30px;
 }
 
-.team-title {
+.team__title {
   font-weight: 700;
   font-size: 36px;
   line-height: 1.17;
@@ -647,7 +697,7 @@ body {
   margin-bottom: 50px;
 }
 
-.card-title {
+.card__title {
   font-weight: 500;
   font-size: 16px;
   line-height: 1.19;
@@ -655,7 +705,7 @@ body {
   margin-bottom: 10px;
 }
 
-.card-text {
+.card__text {
   font-size: 16px;
   line-height: 1.19;
   letter-spacing: 0.03em;
@@ -663,7 +713,7 @@ body {
   margin-bottom: 16px;
 }
 
-.card-box {
+.card__box {
   -webkit-box-sizing: border-box;
           box-sizing: border-box;
   background-color: #ffffff;
@@ -672,7 +722,7 @@ body {
   border-radius: 0px 0px 4px 4px;
 }
 
-.card-wrap {
+.card__wrap {
   padding-top: 30px;
   padding-bottom: 30px;
 }
@@ -687,7 +737,7 @@ body {
   gap: 10px;
 }
 
-.team-social-link {
+.team-social__link {
   width: 44px;
   height: 44px;
   border-radius: 50%;
@@ -708,11 +758,11 @@ body {
   -webkit-transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
           transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
-.team-social-link:hover, .team-social-link:focus {
+.team-social__link:hover, .team-social__link:focus {
   background-color: var(--accent-color);
 }
 
-.team-social-icon {
+.team-social__icon {
   fill: #AFB1B8;
   -webkit-transition-property: fill;
   transition-property: fill;
@@ -722,12 +772,12 @@ body {
           transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.team-social-link:hover .team-social-icon,
-.team-social-link:focus .team-social-icon {
+.team-social__link:hover .team-social__icon,
+.team-social__link:focus .team-social__icon {
   fill: #ffffff;
 }
 
-.clients-title {
+.clients__title {
   margin-bottom: 50px;
   font-weight: 700;
   font-size: 36px;
@@ -736,7 +786,7 @@ body {
   text-align: center;
 }
 
-.clients-list {
+.clients__list {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -745,15 +795,15 @@ body {
           justify-content: center;
 }
 
-.clients-item {
+.clients__item {
   width: 170px;
   height: 92px;
 }
-.clients-item:not(:last-child) {
+.clients__item:not(:last-child) {
   margin-right: 30px;
 }
 
-.clients-link {
+.clients__link {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -774,12 +824,12 @@ body {
   -webkit-transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
           transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
-.clients-link:hover, .clients-link:focus {
+.clients__link:hover, .clients__link:focus {
   color: var(--accent-color);
   border-color: var(--accent-color);
 }
 
-.clients-icon {
+.clients__icon {
   fill: currentColor;
 }
 
@@ -803,15 +853,15 @@ body {
   color: var(--accent-color);
 }
 
-.adress-list {
+.adress__list {
   font-style: normal;
 }
 
-.address-item {
+.address__item {
   margin-bottom: 0;
 }
 
-.address-link {
+.address__link {
   font-family: var(--main-font);
   font-size: 14px;
   line-height: 1.71;
@@ -825,13 +875,13 @@ body {
           transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.address-link-item,
-.mail-link-item {
+.address__link-item,
+.mail__link-item {
   margin-bottom: 9px;
 }
 
-.mail-link,
-.tel-link {
+.mail__link,
+.tel__link {
   font-family: var(--main-font);
   font-size: 14px;
   line-height: 1.71;
@@ -845,12 +895,12 @@ body {
           transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.address-link:hover,
-.address-link:focus,
-.mail-link:hover,
-.mail-link:focus,
-.tel-link:hover,
-.tel-link:focus {
+.address__link:hover,
+.address__link:focus,
+.mail__link:hover,
+.mail__link:focus,
+.tel__link:hover,
+.tel__link:focus {
   color: var(--accent-color);
 }
 
@@ -858,11 +908,11 @@ body {
   display: inline-grid;
 }
 
-.footer-container-address {
+.footer-container__address {
   margin-right: 70px;
 }
 
-.footer-join-title {
+.footer__join-title {
   margin-top: 0;
   margin-bottom: 20px;
   font-weight: 700;
@@ -873,7 +923,7 @@ body {
   color: #ffffff;
 }
 
-.footer-social {
+.footer__social {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -883,12 +933,12 @@ body {
   gap: 10px;
 }
 
-.footer-social-item {
+.footer__social-item {
   width: 44px;
   height: 44px;
 }
 
-.footer-social-link {
+.footer__social-link {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -909,21 +959,21 @@ body {
   -webkit-transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
           transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
-.footer-social-link:hover, .footer-social-link:focus {
+.footer__social-link:hover, .footer__social-link:focus {
   background-color: var(--accent-color);
 }
 
-.footer-social-icon {
+.footer__social-icon {
   fill: currentColor;
 }
 
-.footer-container-subscribe {
+.footer-subscribe {
   margin-left: auto;
   display: inline-grid;
   margin-left: 93px;
 }
 
-.footer-subscribe-title {
+.footer-subscribe__title {
   margin-bottom: 20px;
   font-weight: 700;
   font-size: 14px;
@@ -939,7 +989,7 @@ body {
   display: flex;
 }
 
-.email-form-input {
+.email-form__input {
   margin-right: 12px;
   padding: 15px 16px;
   min-width: 358px;
@@ -953,24 +1003,6 @@ body {
   outline: transparent;
 }
 
-.email-form-btn {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  padding: 10px 28px;
-}
-
-.form-btn-icon {
-  fill: #ffffff;
-  margin-left: 10px;
-}
-
 .filter-list {
   display: -webkit-box;
   display: -ms-flexbox;
@@ -981,38 +1013,6 @@ body {
       -ms-flex-pack: center;
           justify-content: center;
   margin-bottom: 50px;
-}
-
-.filter-btn {
-  padding-left: 22px;
-  padding-right: 22px;
-  padding-top: 6px;
-  padding-bottom: 6px;
-  font-family: var(--main-font);
-  color: var(--main-page-color);
-  font-weight: 500;
-  font-size: 16px;
-  line-height: 1.6;
-  letter-spacing: 0.03em;
-  text-align: center;
-  background-color: var(--light);
-  cursor: pointer;
-  border: none;
-  border-radius: 4px;
-  -webkit-transition-property: color, background-color, -webkit-box-shadow;
-  transition-property: color, background-color, -webkit-box-shadow;
-  transition-property: color, background-color, box-shadow;
-  transition-property: color, background-color, box-shadow, -webkit-box-shadow;
-  -webkit-transition-duration: 250ms;
-          transition-duration: 250ms;
-  -webkit-transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
-          transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
-}
-.filter-btn:hover, .filter-btn:focus {
-  color: #ffffff;
-  background-color: var(--accent-color);
-  -webkit-box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08), 0px 2px 2px rgba(0, 0, 0, 0.12);
-          box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08), 0px 2px 2px rgba(0, 0, 0, 0.12);
 }
 
 .portfolio-filter-item {
