--- a/sass/components/_btn.scss
+++ b/sass/components/_btn.scss
@@ -24,3 +24,73 @@
 }
 }
 
+.form-btn {
+    display: flex;    
+    justify-content: center;
+    align-items: center;
+    padding: 10px 28px;
+}
+
+.form-btn__icon {
+    fill: #ffffff;
+    margin-left: 10px;
+}
+
+.filter-btn {
+    padding-left: 22px;
+    padding-right: 22px;
+    padding-top: 6px;
+    padding-bottom: 6px;
+    font-family: var(--main-font);
+    color: var(--main-page-color);
+    font-weight: 500;
+    font-size: 16px;
+    line-height: 1.6;
+    letter-spacing: 0.03em;
+    text-align: center;
+    background-color: var(--light);
+    cursor: pointer;
+    border: none;
+    border-radius: 4px;
+    transition-property: color, background-color, box-shadow;
+    transition-duration: 250ms;
+    transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+
+&:hover,
+&:focus {
+    color: #ffffff;
+    background-color: var(--accent-color);
+    box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08), 0px 2px 2px rgba(0, 0, 0, 0.12);
+}
+}
+
+.modal-btn {
+    display: block;
+    margin: 0 auto;
+}
+
+.modal-button-close {
+    position: absolute;
+    top: 8px;
+    right: 8px;
+    padding: 0;
+    width: 30px;
+    height: 30px;
+    border-radius: 50%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background: #ffffff;
+    border: 1px solid rgba(0, 0, 0, 0.1);
+    cursor: pointer;
+    color: currentColor;
+    transition-property: fill, border-color;
+    transition-duration: 250ms;
+    transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+
+&:hover,
+&:focus {
+    fill: var(--accent-color);
+    border-color: var(--accent-color);
+}
+}
