--- a/sass/layout/_features.scss
+++ b/sass/layout/_features.scss
@@ -1,8 +1,8 @@
-.features-list {
+.features__list {
     display: flex;
 }
 
-.features-item {
+.features__item {
     width: 270px;
     margin-right: 30px;
 
@@ -11,7 +11,7 @@
 }
 }
 
-.features-icon-container {
+.features__icon-container {
     display: flex;
     height: 120px;
     margin-bottom: 30px;
@@ -21,7 +21,7 @@
     background-color: var(--light);
 }
 
-.features-title {
+.features__title {
     margin-bottom: 10px;
     font-weight: 700;
     font-size: 14px;
@@ -30,7 +30,7 @@
     text-transform: uppercase;
 }
 
-.features-text {
+.features__text {
     font-size: 14px;
     line-height: 1.71;
     letter-spacing: 0.03em;
