--- a/sass/layout/_team.scss
+++ b/sass/layout/_team.scss
@@ -1,13 +1,13 @@
 .team {
     background-color: var(--light);
 }
-.team-cards {
+.team__cards {
     display: flex;
     text-align: center;
     gap: 30px;
 }
 
-.team-title {
+.team__title {
     font-weight: 700;
     font-size: 36px;
     line-height: 1.17;
@@ -16,7 +16,7 @@
     color: var(--main-page-color);
     margin-bottom: 50px;
 }
-.card-title {
+.card__title {
     font-weight: 500;
     font-size: 16px;
     line-height: 1.19;
@@ -24,7 +24,7 @@
     margin-bottom: 10px;
 }
 
-.card-text {
+.card__text {
     font-size: 16px;
     line-height: 1.19;
     letter-spacing: 0.03em;
@@ -32,7 +32,7 @@
     margin-bottom: 16px;
 }
 
-.card-box {
+.card__box {
     box-sizing: border-box;
     background-color: #ffffff;
     box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
@@ -40,7 +40,7 @@
     border-radius: 0px 0px 4px 4px;
 }
 
-.card-wrap {
+.card__wrap {
     padding-top: 30px;
     padding-bottom: 30px;
 }
@@ -50,7 +50,7 @@
     justify-content: center;
     gap: 10px;
 }
-.team-social-link {
+.team-social__link {
     width: 44px;
     height: 44px;
     border-radius: 50%;
@@ -68,14 +68,14 @@
 }
 }
 
-.team-social-icon {
+.team-social__icon {
     fill: #AFB1B8;
     transition-property: fill;
     transition-duration: 250ms;
     transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.team-social-link:hover .team-social-icon,
-.team-social-link:focus .team-social-icon {
+.team-social__link:hover .team-social__icon,
+.team-social__link:focus .team-social__icon {
     fill: #ffffff;
 }
